--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
     "body-parser": "^2.2.0",
+    "framer-motion": "^12.23.24",
     "json-server": "^0.17.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.16"
   },
